--- a/assets/stylesheets/_bigvid.scss
+++ b/assets/stylesheets/_bigvid.scss
@@ -1,21 +1,9 @@
 #bigvid-container {
   position: fixed;
-  right: 0;
+  right: 20px;
   bottom: 0;
   z-index: -1;
   height: 100%;
   width: 100%;
   overflow: hidden;
-
-  video {
-    opacity: 0.95;
-    filter: alpha(opacity=95); /* For IE8 and earlier */
-  }
-
-  #bigvid-video {
-    min-width: 100%;
-    min-height: 100%;
-    background: url(/assets/video/poster2.png) no-repeat;
-    background-size: cover;
-  }
 }
