--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,11 +1,28 @@
-#curtain-images {
+/*#index-top {
+  background: #3498db;
+}
+
+#curtain-images > h3 {
+  padding-top: 14%;
+}*/
+
+/*#curtain-images {
   position: absolute;
-  /*padding-left: 32%;*/
+  padding-left: 32%;
   padding-left: 25%;
   padding-top: 10%;
 }
 
-#curtain-images h3 {
+@media screen and (orientation: portrait) {
+  img.ri { max-width: 90%; }
+}
+
+@media screen and (orientation: landscape) {
+  img.ri { max-height: 90%; }
+}*/
+
+
+/*#curtain-images h3 {
   color: #2F2F2F;
   font-size: 2em;
   line-height: 1.5;
@@ -15,7 +32,6 @@
 }
 
 #index-nonvid {
-  background: #3498db;
 }
 
 .carousel{
@@ -33,7 +49,7 @@
   position:relative;
   float:left;
   right:0;
-  width:33.33333%; /* 100 / number of frames */
+  width:33.33333%;  
 }
 .carousel img{
   display:block;
@@ -68,11 +84,11 @@
   font-size: 22px;
   font-weight: bold;
 }
+
 a#previous_frame {
   margin-left: -5%;
-  /*padding-left: 25%*/
 }
+
 a#next_frame {
   margin-left: 67%;
-  /*padding-left: 50%;*/
 }
